Resolves: tdf#152053 GetOptimalColWidth() obtain number format from next row

... if 1st or 2nd row doesn't have one applied, i.e. is header.

Change-Id: I4b33fa4abcbe74b02d416cfa494c0813a8f0086e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142744
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins